# Attemory

./: .gitignore  CMakeLists.txt  README.md  index.html  pyproject.toml  setup.cfg
3rd/cpp-httplib/: version.txt
3rd/json/: version.txt
benchmarks/: LoCoMo.md  LongMemEval.md  README.md  lme.patch  locomo.patch  prepare_bench.sh  semble.md  semble.patch  sweqa.md  sweqa.patch
benchmarks/results/LoCoMo/: eval_results.json  report.txt
benchmarks/results/LongMemEval/: attemory-m-results.txt  attemory-s-results.txt
benchmarks/results/SWEQA/: results.tsv
benchmarks/results/semble/: attemory.json
doc/: usage.md
examples/: weekly_diary.py  weekly_diary.txt
packaging/: collect_runtime.py  runtime_setup.py
packaging/ci/: runtime-wheels.yml
packaging/runtime-linux-cpu/: README.md  setup.py
packaging/runtime-linux-cpu/python/attemory_runtime_linux_cpu/: runtime.py
packaging/runtime-linux-cuda-cu121/: README.md  setup.cfg  setup.py
packaging/runtime-linux-cuda-cu121/python/attemory_runtime_linux_cuda_cu121/: runtime.py
packaging/runtime-linux-cuda-cu124/: README.md  setup.py
packaging/runtime-linux-cuda-cu124/python/attemory_runtime_linux_cuda_cu124/: __init__.py  runtime.py
packaging/runtime-linux-cuda-cu126/: README.md  setup.py
packaging/runtime-linux-cuda-cu126/python/attemory_runtime_linux_cuda_cu126/: runtime.py
packaging/runtime-linux-cuda-cu129/: README.md  setup.py
packaging/runtime-linux-cuda-cu129/python/attemory_runtime_linux_cuda_cu129/: runtime.py
packaging/runtime-linux-cuda-cu132/: README.md  setup.py
packaging/runtime-linux-cuda-cu132/python/attemory_runtime_linux_cuda_cu132/: runtime.py
packaging/runtime-macos-metal/: README.md  setup.py
packaging/runtime-macos-metal/python/attemory_runtime_macos_metal/: runtime.py
packaging/scripts/: build_linux_cpu_wheel.sh  build_linux_cuda_wheel.sh  build_macos_metal_wheel.sh  install_cuda_toolkit_mamba.sh  test_linux_runtime_wheels.sh
python/attemory/: __init__.py  _version.py  cli.py  client.py  exceptions.py  mcp.py  model_resolver.py  models.py  runtime.py  server.py  transport.py
python/tests/: server_stability_test.py  test_cli.py  test_client.py  test_kv_persist_server.py  test_mcp.py  test_model_resolver.py  test_models.py
src/attemory/: version.h.in
src/context/: attemory_types.h  context.cpp  context.h  context_state.h  context_types.h
src/context/command/: command_result.cpp  command_result.h  command_scope.cpp  command_scope.h
src/context/kv/: resident_kv_store.cpp  resident_kv_store.h  segment_kv_cache_commands.cpp  segment_kv_manager.cpp  segment_kv_manager.h  segment_kv_metadata.cpp  segment_kv_metadata.h
src/context/search/: search_context.h  search_results.cpp  search_results.h  search_runner.cpp  search_runner.h  search_service.cpp  search_service.h
src/context/session/: segment_planner.cpp  segment_planner.h  session_lookup.cpp  session_lookup.h  session_manager.cpp  session_manager.h  session_state.h  session_status.cpp  session_status.h  session_summary.cpp  session_summary.h
src/context/storage/: model_cache_key.cpp  model_cache_key.h  storage_layout.cpp  storage_layout.h
src/persistent/: binary_io.cpp  binary_io.h  kv_cache_persistence.cpp  kv_cache_state.cpp  persistent.cpp  persistent.h  session_persistence.cpp  storage_paths.cpp
src/server/: http_common.cpp  http_common.h  request_parser.cpp  request_parser.h  response_builder.cpp  response_builder.h  routes.cpp  routes.h  server.cpp  server_args.cpp  server_args.h
tests/: http_contract_test.cpp  incremental_index_test.cpp  persistent_session_test.cpp  resident_kv_store_test.cpp  search_results_test.cpp  segment_planner_test.cpp  server_request_parser_test.cpp  server_response_builder_test.cpp  session_status_test.cpp  test_support.h
whl/cu121/: index.html
whl/cu121/attemory-runtime-linux-cuda-cu121/: index.html
whl/cu124/: index.html
whl/cu124/attemory-runtime-linux-cuda-cu124/: index.html
whl/cu126/: index.html
whl/cu126/attemory-runtime-linux-cuda-cu126/: index.html
whl/cu129/: index.html
whl/cu129/attemory-runtime-linux-cuda-cu129/: index.html
